# LiquidFunWrapper

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/ch/shibastudio/liquidfunwrapper/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/ch/shibastudio/liquidfunwrapper/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/ch/shibastudio/liquidfunwrapper/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
liquidwrapper/: CMakeLists.txt  build.gradle
liquidwrapper/libs/liquidfun/include/Box2D/Collision/Shapes/: b2ChainShape.h  b2CircleShape.h  b2EdgeShape.h  b2PolygonShape.h  b2Shape.h
liquidwrapper/libs/liquidfun/include/Box2D/Common/: b2BlockAllocator.h  b2FreeList.h  b2GrowableBuffer.h  b2GrowableStack.h  b2IntrusiveList.h  b2Math.h  b2SlabAllocator.h  b2StackAllocator.h  b2Stat.h  b2Timer.h  b2TrackedBlock.h
liquidwrapper/libs/liquidfun/include/Box2D/Dynamics/: b2Body.h  b2ContactManager.h  b2Fixture.h  b2TimeStep.h  b2World.h  b2WorldCallbacks.h
liquidwrapper/libs/liquidfun/include/Box2D/Particle/: b2Particle.h  b2ParticleAssembly.h  b2ParticleGroup.h  b2ParticleSystem.h  b2StackQueue.h  b2VoronoiDiagram.h
liquidwrapper/src/androidTest/java/ch/shibastudio/liquidwrapper/: ExampleInstrumentedTest.java
liquidwrapper/src/main/: AndroidManifest.xml
liquidwrapper/src/main/cpp/: bodydefwrapper.cpp  bodywrapper.cpp  chainshapewrapper.cpp  circleshapewrapper.cpp  colorwrapper.cpp  edgeshapewrapper.cpp  fixturedefwrapper.cpp  fixturewrapper.cpp  liquidwrapper.cpp  native-lib.cpp  particlecolorwrapper.cpp  particledefwrapper.cpp  particlegroupdefwrapper.cpp  particlegroupwrapper.cpp  particlesystemdefwrapper.cpp  particlesystemwrapper.cpp  polygonshapewrapper.cpp  shapewrapper.cpp  transformwrapper.cpp  vec2wrapper.cpp  worldwrapper.cpp
liquidwrapper/src/main/java/ch/shibastudio/liquidwrapper/: AbstractNativeObject.java  DebugUtils.java  HelloWrapper.java  LiquidWrapperJNI.java
liquidwrapper/src/main/java/ch/shibastudio/liquidwrapper/collision/shapes/: ChainShape.java  CircleShape.java  EdgeShape.java  PolygonShape.java  Shape.java  ShapeType.java  ShapeUtils.java
liquidwrapper/src/main/java/ch/shibastudio/liquidwrapper/common/: Color.java  Transform.java  Vec2.java
liquidwrapper/src/main/java/ch/shibastudio/liquidwrapper/dynamics/: Body.java  BodyDef.java  BodyType.java  Fixture.java  FixtureDef.java  World.java
liquidwrapper/src/main/java/ch/shibastudio/liquidwrapper/particle/: ParticleColor.java  ParticleDef.java  ParticleFlag.java  ParticleGroup.java  ParticleGroupDef.java  ParticleGroupFlag.java  ParticleSystem.java  ParticleSystemDef.java
liquidwrapper/src/main/res/values/: strings.xml
liquidwrapper/src/test/java/ch/shibastudio/liquidwrapper/: ExampleUnitTest.java
